--- a/boot/grub/grub.conf
+++ b/boot/grub/grub.conf
@@ -1,10 +1,10 @@
 default 0
-timeout 10
+timeout 2
 
 color white/blue white/cyan
 
 title Galileo Tinycore Linux
-	root (hd0,1)
-	kernel /bzImage quiet console=ttyS1,115200n8 reset=efi,warm noswap nozswap home=mmcblk0p2
+	root (hd0,0)
+	kernel /bzImage quiet console=ttyS1,115200n8 reset=efi,warm noswap nozswap
 	initrd /core.gz
 
